Update fiddle to 1.1.4
* Fixes issue at build time where mkmf required fileutils but it
  was not installed yet (ruby/fiddle#153).
* Fixes issue related to reline where missing native libraries did
  not raise error and fall back correctly (ruby/reline#766).

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ lib/ruby/stdlib/English*
 lib/ruby/stdlib/erb*
 lib/ruby/stdlib/error_highlight*
 lib/ruby/stdlib/ffi*
+lib/ruby/stdlib/fiddle*
 lib/ruby/stdlib/fileutils*
 lib/ruby/stdlib/find*
 lib/ruby/stdlib/forwardable*
